refactor(spring): share the loading of scanned classes in AOT processing
Keep the independence check the default component scan applies, so a
local interface, which has no canonical name to register a hint for,
stays out of the JavaScript definition scan.